// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTimePicker DateTimePicker date-all demo works fine 1`] = `
<date-all>
  <t-cell
    arrow="{{true}}"
    data-mode="datetime"
    hover="{{true}}"
    note="年月日时分"
    tClass="pannel-item"
    tClassNote="empty"
    title="选择日期时间(年月日时分)"
    bind:tap="showPicker"
  />
  <t-date-time-picker
    format="YYYY-MM-DD HH:mm"
    mode="minute"
    title="选择日期和时间"
    value="{{1640217600000}}"
    visible="{{false}}"
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</date-all>
`;

exports[`DateTimePicker DateTimePicker time-min demo works fine 1`] = `
<time-min>
  <t-cell
    arrow="{{true}}"
    data-mode="time"
    hover="{{true}}"
    note="时 分"
    tClass="pannel-item"
    tClassNote="empty"
    title="选择时间(时分)"
    bind:tap="showPicker"
  />
  <t-date-time-picker
    format="HH:mm"
    mode="{{
      Array [
        "null",
        "minute",
      ]
    }}"
    title="选择时间"
    value="10:00"
    visible="{{false}}"
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</time-min>
`;

exports[`DateTimePicker DateTimePicker year-month demo works fine 1`] = `
<year-month>
  <t-cell
    arrow="{{true}}"
    data-mode="month"
    hover="{{true}}"
    note="年 月"
    tClass="pannel-item"
    tClassNote="empty"
    title="选择日期(年月)"
    bind:tap="showPicker"
  />
  <t-date-time-picker
    end="2030-09-09 12:12:12"
    format="YYYY-MM"
    mode="month"
    start="2000-01-01 00:00:00"
    title="选择日期"
    value="2021-09"
    visible="{{false}}"
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</year-month>
`;

exports[`DateTimePicker DateTimePicker year-month-date demo works fine 1`] = `
<year-month-date>
  <t-cell
    arrow="{{true}}"
    class="test"
    data-mode="date"
    hover="{{true}}"
    note="年 月 日"
    tClass="pannel-item"
    tClassNote="empty"
    title="选择日期(年月日)"
    bind:tap="showPicker"
  />
  <t-date-time-picker
    defaultValue="{{1640217600000}}"
    end="2030-09-09 12:12:12"
    format="YYYY-MM-DD"
    mode="date"
    start="2000-01-01 00:00:00"
    title="选择日期"
    visible="{{false}}"
    bind:cancel="hidePicker"
    bind:change="onConfirm"
    bind:pick="onColumnChange"
  />
</year-month-date>
`;
